# reelrank

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: refresh.yml
backend/: __init__.py  app.py  schemas.py
config/: default.yaml  ml25m.yaml
deploy/: entrypoint.sh
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: MovieCard.tsx  Onboarding.tsx  ResultsGrid.tsx  SearchBar.tsx
scripts/: demo_search.py  evaluate_baselines.py  evaluate_cold_start.py  refresh_tmdb.py  train_ranker.py  train_two_tower.py
src/reelrank/: __init__.py  config.py  report.py  utils.py
src/reelrank/baselines/: __init__.py  content.py  popularity.py
src/reelrank/data/: __init__.py  download.py  movielens.py
src/reelrank/eval/: __init__.py  harness.py  metrics.py
src/reelrank/features/: __init__.py  content.py  embedder.py
src/reelrank/models/: __init__.py  factory.py  hybrid.py  ranker.py  two_tower.py
src/reelrank/ranking/: __init__.py  reranker.py
src/reelrank/retrieval/: __init__.py  proxima_index.py  recommender.py
src/reelrank/serving/: __init__.py  engine.py  explain.py
src/reelrank/tmdb/: __init__.py  catalog.py  client.py
src/reelrank/training/: __init__.py  pipeline.py  ranker_trainer.py  two_tower_trainer.py
tests/: test_backend.py  test_data.py  test_metrics.py  test_models.py  test_ranker.py  test_retrieval.py  test_serving.py  test_tmdb.py
