[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reelrank"
version = "0.1.0"
description = "Two-stage hybrid movie recommender: two-tower retrieval over the Proxima ANN index, neural ranking, and natural-language vibe search."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sushant Lokhande" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "requests>=2.31",
    "tqdm>=4.66",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
train = ["torch>=2.2", "sentence-transformers>=2.6"]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
dev = ["pytest>=8.0", "ruff>=0.3", "mypy>=1.9"]

# Proxima is the ANN index (hard project requirement). It is not on PyPI; install
# the sibling repo in editable/build mode:  pip install ../proxima
# (Docker builds it from source in a multi-stage image -- see deploy/Dockerfile.)

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
